--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div>
 
 <script type="module">
-    import {LicenseType, generateLicense} from './js'
+    import {LicenseType, generateLicense} from './js/index.js'
 
     const app = new Vue({
         el: '#app',
